--- a/client/posts.css
+++ b/client/posts.css
@@ -14,4 +14,5 @@ body{
     height: 100vh;
     justify-content:center;
     align-content: center;
+    background-color:rgba(135, 127, 153, 0.733);
 }
